--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         "psr-4": {
             "MDP\\Container\\": "src/"
         }
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.89"
     }
 }
